Improved framework. Checks more run states, and added utilities for disposing assistants and threads.

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -23,17 +23,14 @@
     "import oaihelper as framework\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client()\n",
-    "\n",
-    "## Create an assistant\n",
-    "math_tutor_assistant = framework.create_assistant(client,\"Math Tutor\",\"You are a personal math tutor. Write and run code to answer math questions.\", [{\"type\": \"code_interpreter\"}], common.gpt_deployment_name)"
+    "client = framework.get_openai_client()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test messages and recall the threads across users"
+    "### Create an assistant with the code interpreter tool"
    ]
   },
   {
@@ -45,34 +42,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving existing thread for John with wa_id 123\n",
-      "Generated message: 2 + 2 equals 4.\n",
-      "To John: 2 + 2 equals 4.\n",
-      "Retrieving existing thread for Sarah with wa_id 456\n",
-      "Generated message: The expression \\( x \\times x \\) simplifies to \\( x^2 \\), which represents the square of the variable \\( x \\).\n",
-      "To Sarah: The expression \\( x \\times x \\) simplifies to \\( x^2 \\), which represents the square of the variable \\( x \\).\n"
+      "Added assistant:  asst_4d6rpY6Raa4cl09UchMgZsiY 1\n"
      ]
     }
    ],
    "source": [
+    "## Clear the shelves\n",
+    "framework.clear_shelves()\n",
     "\n",
+    "## Create an assistant\n",
+    "math_tutor_assistant = framework.create_assistant(client,\n",
+    "                                                  name=\"fta-Math Tutor\",\n",
+    "                                                  instructions=\"You are a personal math tutor. Write and run code to answer math questions.\", \n",
+    "                                                  tools=[{\"type\": \"code_interpreter\"}], \n",
+    "                                                  model=common.gpt_deployment_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test messages and recall the threads across users\n",
     "\n",
-    "new_message = framework.generate_response(client,math_tutor_assistant,\"What's 2+2\", \"123\", \"John\")\n",
-    "\n",
-    "new_message = framework.generate_response(client,math_tutor_assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
-    "\n",
-    "#new_message = framework.generate_response(client,math_tutor_assistant,\"What the value of x, for x=m*y+5, if y=2 and m=-10?\", \"123\", \"John\")\n",
-    "\n",
-    "#new_message = framework.generate_response(client,math_tutor_assistant,\"What is the value of y, for y=x*x?, if x=2?\", \"456\", \"Sarah\")"
+    "Here threads can be recalled based on a user_id. The system will create a new thread if it does not exist or reuse and existing one."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new thread for John with user_id 123\n",
+      "Added thread:  thread_ZR42YufKJ0KKVAe2n0LbORBt 1\n",
+      "Generated message: 2 + 2 equals 4.\n",
+      "To John: 2 + 2 equals 4.\n",
+      "Creating new thread for Sarah with user_id 456\n",
+      "Added thread:  thread_P5p6slXHIR1rkam0ioGzrBrS 2\n",
+      "Generated message: The expression \\( x \\times x \\) simplifies to \\( x^2 \\), which represents the square of \\( x \\).\n",
+      "To Sarah: The expression \\( x \\times x \\) simplifies to \\( x^2 \\), which represents the square of \\( x \\).\n",
+      "Retrieving existing thread for John with user_id 123\n",
+      "Generated message: The value of \\(x\\) when \\(y = 2\\) and \\(m = -10\\) is \\(x = -15\\).\n",
+      "To John: The value of \\(x\\) when \\(y = 2\\) and \\(m = -10\\) is \\(x = -15\\).\n",
+      "Retrieving existing thread for Sarah with user_id 456\n",
+      "Generated message: The value of \\( y \\) when \\( x = 2 \\) and \\( y = x \\times x \\) is \\( 4 \\).\n",
+      "To Sarah: The value of \\( y \\) when \\( x = 2 \\) and \\( y = x \\times x \\) is \\( 4 \\).\n"
+     ]
+    }
+   ],
    "source": [
-    "golang_tutor = framework.create_assistant(client,\"Golang\",\"You are an assistant that can help write and explain Go code.\", None, common.gpt_deployment_name)"
+    "new_message = framework.generate_response(client,math_tutor_assistant,\"What's 2+2\", \"123\", \"John\")\n",
+    "\n",
+    "new_message = framework.generate_response(client,math_tutor_assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
+    "\n",
+    "new_message = framework.generate_response(client,math_tutor_assistant,\"What the value of x, for x=m*y+5, if y=2 and m=-10?\", \"123\", \"John\")\n",
+    "\n",
+    "new_message = framework.generate_response(client,math_tutor_assistant,\"What is the value of y, for y=x*x?, if x=2?\", \"456\", \"Sarah\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create another assistant without tools"
    ]
   },
   {
@@ -84,18 +119,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving existing thread for Victor with wa_id 789\n",
-      "Generated message: Below is a Go application that calculates the 1001st prime number. You can run it on your local development setup.\n",
+      "Added assistant:  asst_k5N3HNsbB7cSpAEsKAGuFVLh 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "golang_tutor = framework.create_assistant(client,name=\"Golang\",instructions=\"You are an assistant that can help write and explain Go code.\", model=common.gpt_deployment_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new thread for Victor with user_id 789\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added thread:  thread_5hVlSXbnbEb2DkoBUomDY5TB 3\n",
+      "Generated message: Here's a simple Go application that calculates the 1001st prime number using the Sieve of Eratosthenes, a classic algorithm for finding all prime numbers up to any given limit. Keep in mind that since we don't know in advance where the 1001st prime will be, we have to either estimate an upper limit or dynamically grow our search.\n",
+      "\n",
+      "For simplicity, let's use a dynamic approach where we start with a reasonable range and keep increasing it until we find the 1001st prime number.\n",
       "\n",
       "```go\n",
       "package main\n",
       "\n",
       "import (\n",
       "\t\"fmt\"\n",
+      "\t\"math\"\n",
       ")\n",
       "\n",
-      "// isPrime checks if a number is a prime number by checking divisibility\n",
-      "// on numbers less than or equal to its square root.\n",
       "func isPrime(number int) bool {\n",
       "\tif number <= 1 {\n",
       "\t\treturn false\n",
@@ -106,7 +166,8 @@
       "\tif number%2 == 0 {\n",
       "\t\treturn false\n",
       "\t}\n",
-      "\tfor i := 3; i*i <= number; i += 2 {\n",
+      "\tsqrtNum := int(math.Sqrt(float64(number)))\n",
+      "\tfor i := 3; i <= sqrtNum; i += 2 {\n",
       "\t\tif number%i == 0 {\n",
       "\t\t\treturn false\n",
       "\t\t}\n",
@@ -114,13 +175,11 @@
       "\treturn true\n",
       "}\n",
       "\n",
-      "// findNthPrime finds the nth prime number by iterating over natural numbers\n",
-      "// and checking for prime status until n primes have been found.\n",
       "func findNthPrime(n int) int {\n",
       "\tcount := 0\n",
       "\tnumber := 1\n",
       "\tfor count < n {\n",
-      "\t\tnumber++\n",
+      "\t\tnumber += 1\n",
       "\t\tif isPrime(number) {\n",
       "\t\t\tcount++\n",
       "\t\t}\n",
@@ -129,29 +188,31 @@
       "}\n",
       "\n",
       "func main() {\n",
-      "\tnthPrimeNumber := findNthPrime(1001)\n",
-      "\tfmt.Printf(\"The 1001st prime number is: %d\\n\", nthPrimeNumber)\n",
+      "\tconst targetPrimeIndex = 1001\n",
+      "\tnthPrime := findNthPrime(targetPrimeIndex)\n",
+      "\tfmt.Printf(\"The %d-th prime number is: %d\\n\", targetPrimeIndex, nthPrime)\n",
       "}\n",
       "```\n",
       "\n",
-      "Save this code to a file with a `.go` extension, for example, `find_prime.go`. To execute the program, you need to have Go installed on your computer. Open your command line, navigate to the directory where the file is located, and run the following commands:\n",
+      "To run this application, just paste the code into a file (for example, `find_prime.go`), and then execute it using the Go toolchain:\n",
       "\n",
-      "```bash\n",
+      "```sh\n",
       "go run find_prime.go\n",
       "```\n",
       "\n",
-      "This command will compile and run your Go program, printing the 1001st prime number to the console. If you prefer to compile it first and then run the executable, you can use `go build` followed by the execution of the generated file.\n",
-      "To Victor: Below is a Go application that calculates the 1001st prime number. You can run it on your local development setup.\n",
+      "This program defines a simple `isPrime` function that checks the primality of a given number, and then it finds the 1001st prime number by incrementing the variable `number` until it has found the desired number of primes.\n",
+      "To Victor: Here's a simple Go application that calculates the 1001st prime number using the Sieve of Eratosthenes, a classic algorithm for finding all prime numbers up to any given limit. Keep in mind that since we don't know in advance where the 1001st prime will be, we have to either estimate an upper limit or dynamically grow our search.\n",
+      "\n",
+      "For simplicity, let's use a dynamic approach where we start with a reasonable range and keep increasing it until we find the 1001st prime number.\n",
       "\n",
       "```go\n",
       "package main\n",
       "\n",
       "import (\n",
       "\t\"fmt\"\n",
+      "\t\"math\"\n",
       ")\n",
       "\n",
-      "// isPrime checks if a number is a prime number by checking divisibility\n",
-      "// on numbers less than or equal to its square root.\n",
       "func isPrime(number int) bool {\n",
       "\tif number <= 1 {\n",
       "\t\treturn false\n",
@@ -162,7 +223,8 @@
       "\tif number%2 == 0 {\n",
       "\t\treturn false\n",
       "\t}\n",
-      "\tfor i := 3; i*i <= number; i += 2 {\n",
+      "\tsqrtNum := int(math.Sqrt(float64(number)))\n",
+      "\tfor i := 3; i <= sqrtNum; i += 2 {\n",
       "\t\tif number%i == 0 {\n",
       "\t\t\treturn false\n",
       "\t\t}\n",
@@ -170,13 +232,11 @@
       "\treturn true\n",
       "}\n",
       "\n",
-      "// findNthPrime finds the nth prime number by iterating over natural numbers\n",
-      "// and checking for prime status until n primes have been found.\n",
       "func findNthPrime(n int) int {\n",
       "\tcount := 0\n",
       "\tnumber := 1\n",
       "\tfor count < n {\n",
-      "\t\tnumber++\n",
+      "\t\tnumber += 1\n",
       "\t\tif isPrime(number) {\n",
       "\t\t\tcount++\n",
       "\t\t}\n",
@@ -185,18 +245,19 @@
       "}\n",
       "\n",
       "func main() {\n",
-      "\tnthPrimeNumber := findNthPrime(1001)\n",
-      "\tfmt.Printf(\"The 1001st prime number is: %d\\n\", nthPrimeNumber)\n",
+      "\tconst targetPrimeIndex = 1001\n",
+      "\tnthPrime := findNthPrime(targetPrimeIndex)\n",
+      "\tfmt.Printf(\"The %d-th prime number is: %d\\n\", targetPrimeIndex, nthPrime)\n",
       "}\n",
       "```\n",
       "\n",
-      "Save this code to a file with a `.go` extension, for example, `find_prime.go`. To execute the program, you need to have Go installed on your computer. Open your command line, navigate to the directory where the file is located, and run the following commands:\n",
+      "To run this application, just paste the code into a file (for example, `find_prime.go`), and then execute it using the Go toolchain:\n",
       "\n",
-      "```bash\n",
+      "```sh\n",
       "go run find_prime.go\n",
       "```\n",
       "\n",
-      "This command will compile and run your Go program, printing the 1001st prime number to the console. If you prefer to compile it first and then run the executable, you can use `go build` followed by the execution of the generated file.\n"
+      "This program defines a simple `isPrime` function that checks the primality of a given number, and then it finds the 1001st prime number by incrementing the variable `number` until it has found the desired number of primes.\n"
      ]
     }
    ],
@@ -205,13 +266,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#csv_analyzer_tutor = framework.create_assistant(client,\"\",\"You are an assistant that can help write and explain Go code.\", [{\"type\": \"code_interpreter\"}], common.gpt_deployment_name)\n",
-    "web_parser_assistant = framework.create_assistant(client, \"Web Parser\", \"You are an assistant that can get scrape a web page and download the content.\", [{\"type\": \"code_interpreter\"}], common.gpt_deployment_name)"
+    "### Cleanup"
    ]
   },
   {
@@ -223,40 +281,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving existing thread for Victor with wa_id 789\n",
-      "Generated message: It appears I made an error by attempting to perform an action that I am not capable of due to the restrictions of my current environment. I do not have the ability to directly access or interact with external websites, including the GitHub API.\n",
-      "\n",
-      "To fetch the content from `https://api.github.com/users/Welasco`, you will need to execute the Python script provided in previous messages on your own local machine, which has access to the internet.\n",
-      "\n",
-      "If you require assistance in any other way or have questions on how to execute the code, please feel free to ask!\n",
-      "To Victor: It appears I made an error by attempting to perform an action that I am not capable of due to the restrictions of my current environment. I do not have the ability to directly access or interact with external websites, including the GitHub API.\n",
-      "\n",
-      "To fetch the content from `https://api.github.com/users/Welasco`, you will need to execute the Python script provided in previous messages on your own local machine, which has access to the internet.\n",
-      "\n",
-      "If you require assistance in any other way or have questions on how to execute the code, please feel free to ask!\n"
+      "Deleting:  2  assistants.\n",
+      "AssistantDeleted(id='asst_4d6rpY6Raa4cl09UchMgZsiY', deleted=True, object='assistant.deleted')\n",
+      "AssistantDeleted(id='asst_k5N3HNsbB7cSpAEsKAGuFVLh', deleted=True, object='assistant.deleted')\n",
+      "Deleting:  3  threads.\n",
+      "ThreadDeleted(id='thread_ZR42YufKJ0KKVAe2n0LbORBt', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_P5p6slXHIR1rkam0ioGzrBrS', deleted=True, object='thread.deleted')\n",
+      "ThreadDeleted(id='thread_5hVlSXbnbEb2DkoBUomDY5TB', deleted=True, object='thread.deleted')\n"
      ]
     }
    ],
    "source": [
-    "new_message = framework.generate_response(client,web_parser_assistant,\"Can you help call the website at https://api.github.com/users/Welasco and get the content.\", \"789\", \"Victor\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AssistantDeleted(id='asst_m3VuNaQz8DQLMbxBmjrPFYnL', deleted=True, object='assistant.deleted')\n",
-      "AssistantDeleted(id='asst_5k5iTP8PXB6dXdTXn3sylo5r', deleted=True, object='assistant.deleted')\n",
-      "AssistantDeleted(id='asst_W9IC1zZYLGUMQfEtskJav9Dm', deleted=True, object='assistant.deleted')\n"
-     ]
-    }
-   ],
-   "source": [
+    "#assert framework.ai_assistants == 2\n",
+    "#assert framework.ai_threads==3\n",
+    "\n",
     "framework.cleanup(client)"
    ]
   }
