--- a/notebooks/assistant-01-code.ipynb
+++ b/notebooks/assistant-01-code.ipynb
@@ -153,7 +153,7 @@
     "  if run.status == \"completed\":\n",
     "    break\n",
     "  # TODO: Is it best practice to wait till completed?\n",
-    "  time.sleep(.5)"
+    "  time.sleep(1)"
    ]
   },
   {
