Updated the demo.

--- a/notebooks/assistant-03-function.ipynb
+++ b/notebooks/assistant-03-function.ipynb
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added assistant:  asst_wZeuCGaPVSTMJ7iNweMzZmD4 1\n"
+      "Added assistant:  asst_ULsetpqcIHRqBISBzel04UZ3 1\n"
      ]
     }
    ],
@@ -137,54 +137,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"id\": \"run_T4tZgewCziZPDcsLjP013cNS\",\n",
-      "    \"assistant_id\": \"asst_wZeuCGaPVSTMJ7iNweMzZmD4\",\n",
-      "    \"cancelled_at\": null,\n",
-      "    \"completed_at\": null,\n",
-      "    \"created_at\": 1705172417,\n",
-      "    \"expires_at\": 1705173017,\n",
-      "    \"failed_at\": null,\n",
-      "    \"file_ids\": [],\n",
-      "    \"instructions\": \"Please address the user as Mary.\",\n",
-      "    \"last_error\": null,\n",
-      "    \"metadata\": {},\n",
-      "    \"model\": \"gpt-4-turbo-test\",\n",
-      "    \"object\": \"thread.run\",\n",
-      "    \"required_action\": null,\n",
-      "    \"started_at\": null,\n",
-      "    \"status\": \"queued\",\n",
-      "    \"thread_id\": \"thread_ePQaOVw8V6qebzUYQ4MtVjMc\",\n",
-      "    \"tools\": [\n",
-      "        {\n",
-      "            \"function\": {\n",
-      "                \"name\": \"get_stock_price\",\n",
-      "                \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
-      "                \"parameters\": {\n",
-      "                    \"type\": \"object\",\n",
-      "                    \"properties\": {\n",
-      "                        \"symbol\": {\n",
-      "                            \"type\": \"string\",\n",
-      "                            \"description\": \"The ticker symbol of the stock\"\n",
-      "                        }\n",
-      "                    },\n",
-      "                    \"required\": [\n",
-      "                        \"symbol\"\n",
-      "                    ]\n",
-      "                }\n",
-      "            },\n",
-      "            \"type\": \"function\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 2: Create a Thread\n",
     "thread = client.beta.threads.create()\n",
@@ -203,7 +156,7 @@
     "    instructions=\"Please address the user as Mary.\"\n",
     ")\n",
     "\n",
-    "print(run.model_dump_json(indent=4))"
+    "#print(run.model_dump_json(indent=4))"
    ]
   },
   {
@@ -222,286 +175,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\n",
-      "    \"id\": \"run_T4tZgewCziZPDcsLjP013cNS\",\n",
-      "    \"assistant_id\": \"asst_wZeuCGaPVSTMJ7iNweMzZmD4\",\n",
-      "    \"cancelled_at\": null,\n",
-      "    \"completed_at\": null,\n",
-      "    \"created_at\": 1705172417,\n",
-      "    \"expires_at\": 1705173017,\n",
-      "    \"failed_at\": null,\n",
-      "    \"file_ids\": [],\n",
-      "    \"instructions\": \"Please address the user as Mary.\",\n",
-      "    \"last_error\": null,\n",
-      "    \"metadata\": {},\n",
-      "    \"model\": \"gpt-4-turbo-test\",\n",
-      "    \"object\": \"thread.run\",\n",
-      "    \"required_action\": null,\n",
-      "    \"started_at\": 1705172417,\n",
-      "    \"status\": \"in_progress\",\n",
-      "    \"thread_id\": \"thread_ePQaOVw8V6qebzUYQ4MtVjMc\",\n",
-      "    \"tools\": [\n",
-      "        {\n",
-      "            \"function\": {\n",
-      "                \"name\": \"get_stock_price\",\n",
-      "                \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
-      "                \"parameters\": {\n",
-      "                    \"type\": \"object\",\n",
-      "                    \"properties\": {\n",
-      "                        \"symbol\": {\n",
-      "                            \"type\": \"string\",\n",
-      "                            \"description\": \"The ticker symbol of the stock\"\n",
-      "                        }\n",
-      "                    },\n",
-      "                    \"required\": [\n",
-      "                        \"symbol\"\n",
-      "                    ]\n",
-      "                }\n",
-      "            },\n",
-      "            \"type\": \"function\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
       "Waiting for the Assistant to process...\n",
-      "{\n",
-      "    \"id\": \"run_T4tZgewCziZPDcsLjP013cNS\",\n",
-      "    \"assistant_id\": \"asst_wZeuCGaPVSTMJ7iNweMzZmD4\",\n",
-      "    \"cancelled_at\": null,\n",
-      "    \"completed_at\": null,\n",
-      "    \"created_at\": 1705172417,\n",
-      "    \"expires_at\": 1705173017,\n",
-      "    \"failed_at\": null,\n",
-      "    \"file_ids\": [],\n",
-      "    \"instructions\": \"Please address the user as Mary.\",\n",
-      "    \"last_error\": null,\n",
-      "    \"metadata\": {},\n",
-      "    \"model\": \"gpt-4-turbo-test\",\n",
-      "    \"object\": \"thread.run\",\n",
-      "    \"required_action\": null,\n",
-      "    \"started_at\": 1705172417,\n",
-      "    \"status\": \"in_progress\",\n",
-      "    \"thread_id\": \"thread_ePQaOVw8V6qebzUYQ4MtVjMc\",\n",
-      "    \"tools\": [\n",
-      "        {\n",
-      "            \"function\": {\n",
-      "                \"name\": \"get_stock_price\",\n",
-      "                \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
-      "                \"parameters\": {\n",
-      "                    \"type\": \"object\",\n",
-      "                    \"properties\": {\n",
-      "                        \"symbol\": {\n",
-      "                            \"type\": \"string\",\n",
-      "                            \"description\": \"The ticker symbol of the stock\"\n",
-      "                        }\n",
-      "                    },\n",
-      "                    \"required\": [\n",
-      "                        \"symbol\"\n",
-      "                    ]\n",
-      "                }\n",
-      "            },\n",
-      "            \"type\": \"function\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
       "Waiting for the Assistant to process...\n",
-      "{\n",
-      "    \"id\": \"run_T4tZgewCziZPDcsLjP013cNS\",\n",
-      "    \"assistant_id\": \"asst_wZeuCGaPVSTMJ7iNweMzZmD4\",\n",
-      "    \"cancelled_at\": null,\n",
-      "    \"completed_at\": null,\n",
-      "    \"created_at\": 1705172417,\n",
-      "    \"expires_at\": 1705173017,\n",
-      "    \"failed_at\": null,\n",
-      "    \"file_ids\": [],\n",
-      "    \"instructions\": \"Please address the user as Mary.\",\n",
-      "    \"last_error\": null,\n",
-      "    \"metadata\": {},\n",
-      "    \"model\": \"gpt-4-turbo-test\",\n",
-      "    \"object\": \"thread.run\",\n",
-      "    \"required_action\": {\n",
-      "        \"submit_tool_outputs\": {\n",
-      "            \"tool_calls\": [\n",
-      "                {\n",
-      "                    \"id\": \"call_XTCnU56gVDjhNsl6OVf4HHx4\",\n",
-      "                    \"function\": {\n",
-      "                        \"arguments\": \"{\\\"symbol\\\": \\\"MSFT\\\"}\",\n",
-      "                        \"name\": \"get_stock_price\"\n",
-      "                    },\n",
-      "                    \"type\": \"function\"\n",
-      "                },\n",
-      "                {\n",
-      "                    \"id\": \"call_vmiGVva76m6kGkzTV3yzq1Ev\",\n",
-      "                    \"function\": {\n",
-      "                        \"arguments\": \"{\\\"symbol\\\": \\\"NVDA\\\"}\",\n",
-      "                        \"name\": \"get_stock_price\"\n",
-      "                    },\n",
-      "                    \"type\": \"function\"\n",
-      "                }\n",
-      "            ]\n",
-      "        },\n",
-      "        \"type\": \"submit_tool_outputs\"\n",
-      "    },\n",
-      "    \"started_at\": 1705172417,\n",
-      "    \"status\": \"requires_action\",\n",
-      "    \"thread_id\": \"thread_ePQaOVw8V6qebzUYQ4MtVjMc\",\n",
-      "    \"tools\": [\n",
-      "        {\n",
-      "            \"function\": {\n",
-      "                \"name\": \"get_stock_price\",\n",
-      "                \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
-      "                \"parameters\": {\n",
-      "                    \"type\": \"object\",\n",
-      "                    \"properties\": {\n",
-      "                        \"symbol\": {\n",
-      "                            \"type\": \"string\",\n",
-      "                            \"description\": \"The ticker symbol of the stock\"\n",
-      "                        }\n",
-      "                    },\n",
-      "                    \"required\": [\n",
-      "                        \"symbol\"\n",
-      "                    ]\n",
-      "                }\n",
-      "            },\n",
-      "            \"type\": \"function\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
       "Function Calling\n",
-      "{'tool_calls': [{'id': 'call_XTCnU56gVDjhNsl6OVf4HHx4', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_vmiGVva76m6kGkzTV3yzq1Ev', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
+      "{'tool_calls': [{'id': 'call_Nmgt1xyiXuW5tKNNvdPNS073', 'function': {'arguments': '{\"symbol\": \"MSFT\"}', 'name': 'get_stock_price'}, 'type': 'function'}, {'id': 'call_wcdbWjvesy6vexLADazpZGSj', 'function': {'arguments': '{\"symbol\": \"NVDA\"}', 'name': 'get_stock_price'}, 'type': 'function'}]}\n",
       "Submitting outputs back to the Assistant...\n",
-      "{\n",
-      "    \"id\": \"run_T4tZgewCziZPDcsLjP013cNS\",\n",
-      "    \"assistant_id\": \"asst_wZeuCGaPVSTMJ7iNweMzZmD4\",\n",
-      "    \"cancelled_at\": null,\n",
-      "    \"completed_at\": null,\n",
-      "    \"created_at\": 1705172417,\n",
-      "    \"expires_at\": 1705173017,\n",
-      "    \"failed_at\": null,\n",
-      "    \"file_ids\": [],\n",
-      "    \"instructions\": \"Please address the user as Mary.\",\n",
-      "    \"last_error\": null,\n",
-      "    \"metadata\": {},\n",
-      "    \"model\": \"gpt-4-turbo-test\",\n",
-      "    \"object\": \"thread.run\",\n",
-      "    \"required_action\": null,\n",
-      "    \"started_at\": 1705172424,\n",
-      "    \"status\": \"in_progress\",\n",
-      "    \"thread_id\": \"thread_ePQaOVw8V6qebzUYQ4MtVjMc\",\n",
-      "    \"tools\": [\n",
-      "        {\n",
-      "            \"function\": {\n",
-      "                \"name\": \"get_stock_price\",\n",
-      "                \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
-      "                \"parameters\": {\n",
-      "                    \"type\": \"object\",\n",
-      "                    \"properties\": {\n",
-      "                        \"symbol\": {\n",
-      "                            \"type\": \"string\",\n",
-      "                            \"description\": \"The ticker symbol of the stock\"\n",
-      "                        }\n",
-      "                    },\n",
-      "                    \"required\": [\n",
-      "                        \"symbol\"\n",
-      "                    ]\n",
-      "                }\n",
-      "            },\n",
-      "            \"type\": \"function\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
       "Waiting for the Assistant to process...\n",
-      "{\n",
-      "    \"id\": \"run_T4tZgewCziZPDcsLjP013cNS\",\n",
-      "    \"assistant_id\": \"asst_wZeuCGaPVSTMJ7iNweMzZmD4\",\n",
-      "    \"cancelled_at\": null,\n",
-      "    \"completed_at\": null,\n",
-      "    \"created_at\": 1705172417,\n",
-      "    \"expires_at\": 1705173017,\n",
-      "    \"failed_at\": null,\n",
-      "    \"file_ids\": [],\n",
-      "    \"instructions\": \"Please address the user as Mary.\",\n",
-      "    \"last_error\": null,\n",
-      "    \"metadata\": {},\n",
-      "    \"model\": \"gpt-4-turbo-test\",\n",
-      "    \"object\": \"thread.run\",\n",
-      "    \"required_action\": null,\n",
-      "    \"started_at\": 1705172424,\n",
-      "    \"status\": \"in_progress\",\n",
-      "    \"thread_id\": \"thread_ePQaOVw8V6qebzUYQ4MtVjMc\",\n",
-      "    \"tools\": [\n",
-      "        {\n",
-      "            \"function\": {\n",
-      "                \"name\": \"get_stock_price\",\n",
-      "                \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
-      "                \"parameters\": {\n",
-      "                    \"type\": \"object\",\n",
-      "                    \"properties\": {\n",
-      "                        \"symbol\": {\n",
-      "                            \"type\": \"string\",\n",
-      "                            \"description\": \"The ticker symbol of the stock\"\n",
-      "                        }\n",
-      "                    },\n",
-      "                    \"required\": [\n",
-      "                        \"symbol\"\n",
-      "                    ]\n",
-      "                }\n",
-      "            },\n",
-      "            \"type\": \"function\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
-      "Waiting for the Assistant to process...\n",
-      "{\n",
-      "    \"id\": \"run_T4tZgewCziZPDcsLjP013cNS\",\n",
-      "    \"assistant_id\": \"asst_wZeuCGaPVSTMJ7iNweMzZmD4\",\n",
-      "    \"cancelled_at\": null,\n",
-      "    \"completed_at\": 1705172427,\n",
-      "    \"created_at\": 1705172417,\n",
-      "    \"expires_at\": null,\n",
-      "    \"failed_at\": null,\n",
-      "    \"file_ids\": [],\n",
-      "    \"instructions\": \"Please address the user as Mary.\",\n",
-      "    \"last_error\": null,\n",
-      "    \"metadata\": {},\n",
-      "    \"model\": \"gpt-4-turbo-test\",\n",
-      "    \"object\": \"thread.run\",\n",
-      "    \"required_action\": null,\n",
-      "    \"started_at\": 1705172424,\n",
-      "    \"status\": \"completed\",\n",
-      "    \"thread_id\": \"thread_ePQaOVw8V6qebzUYQ4MtVjMc\",\n",
-      "    \"tools\": [\n",
-      "        {\n",
-      "            \"function\": {\n",
-      "                \"name\": \"get_stock_price\",\n",
-      "                \"description\": \"Retrieve the latest closing price of a stock using its ticker symbol\",\n",
-      "                \"parameters\": {\n",
-      "                    \"type\": \"object\",\n",
-      "                    \"properties\": {\n",
-      "                        \"symbol\": {\n",
-      "                            \"type\": \"string\",\n",
-      "                            \"description\": \"The ticker symbol of the stock\"\n",
-      "                        }\n",
-      "                    },\n",
-      "                    \"required\": [\n",
-      "                        \"symbol\"\n",
-      "                    ]\n",
-      "                }\n",
-      "            },\n",
-      "            \"type\": \"function\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
-      "Assistant: The latest stock prices are as follows:\n",
+      "Assistant: The latest closing stock prices are as follows:\n",
       "\n",
       "- Microsoft (MSFT): $388.47\n",
       "- NVIDIA (NVDA): $547.10\n",
-      "User: Can you please provide me the latest stock prices for Microsoft and NVIDIA?\n"
+      "User: Can you please provide me the latest stock prices for Microsoft and NVIDIA?\n",
+      "ThreadDeleted(id='thread_L58eXV6XvbXv0DMPLfGwg9P1', deleted=True, object='thread.deleted')\n",
+      "AssistantDeleted(id='asst_ULsetpqcIHRqBISBzel04UZ3', deleted=True, object='assistant.deleted')\n"
      ]
     }
    ],
    "source": [
     "while True:\n",
-    "    # Wait for 5 seconds\n",
+    "    # Wait for 1 seconds\n",
     "    time.sleep(1)\n",
     "\n",
     "    # Retrieve the run status\n",
@@ -509,7 +201,7 @@
     "        thread_id=thread.id,\n",
     "        run_id=run.id\n",
     "    )\n",
-    "    print(run_status.model_dump_json(indent=4))\n",
+    "    #print(run_status.model_dump_json(indent=4))\n",
     "\n",
     "    # If run is completed, get messages\n",
     "    if run_status.status == 'completed':\n",
@@ -524,8 +216,8 @@
     "            print(f\"{role.capitalize()}: {content}\")\n",
     "\n",
     "        ## Cleanup\n",
-    "        client.beta.threads.delete(thread.id)\n",
-    "        client.beta.assistants.delete(stock_assistant.id)\n",
+    "        print(client.beta.threads.delete(thread.id))\n",
+    "        print(client.beta.assistants.delete(stock_assistant.id))\n",
     "\n",
     "        break\n",
     "    elif run_status.status == 'requires_action':\n",
