Updated the function descriptions.

--- a/notebooks/assistant-04-function_la_email.ipynb
+++ b/notebooks/assistant-04-function_la_email.ipynb
@@ -99,17 +99,17 @@
     "    \"function\": {\n",
     "\n",
     "        \"name\": \"send_email\",\n",
-    "        \"description\": \"sends an email to a recipient\",\n",
+    "        \"description\": \"sends an email to a recipient(s).\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
     "                \"to\": {\n",
     "                    \"type\": \"string\",\n",
-    "                    \"description\": \"The ticker symbol of the stock\"\n",
+    "                    \"description\": \"The email(s) the email should be sent to.\"\n",
     "                },\n",
     "                \"content\": {\n",
     "                    \"type\": \"string\",\n",
-    "                    \"description\": \"The ticker symbol of the stock\"\n",
+    "                    \"description\": \"The content of the email.\"\n",
     "                }\n",
     "            },\n",
     "            \"required\": [\"to\", \"content\"]\n",
